--- a/sass/_clients-list.sass
+++ b/sass/_clients-list.sass
@@ -202,28 +202,31 @@ body
     .td-17,
         span
             top: -8px
-    .td-2
+    .td-2,.td-3,.td-4,.td-5,.td-6,.td-12
         .is-rotate
-            span
-                margin-top: 5px
-    .td-3
-        .is-rotate
-            span
-                margin-top: 21px
-    .td-4,
-    .td-5
-        .is-rotate
-            span
-                margin-top: 10px
-    .td-6,
-    .td-9,
-    .td-10
-        span
-            top: 10px
-    .td-12
-        .is-rotate
-            span
-                margin-top: 16px  
+            margin-top: 47px 
+    // .td-2
+    //     .is-rotate
+    //         span
+    //             margin-top: 5px
+    // .td-3
+    //     .is-rotate
+    //         span
+    //             margin-top: 21px
+    // .td-4,
+    // .td-5
+    //     .is-rotate
+    //         span
+    //             margin-top: 10px
+    // .td-6,
+    // .td-9,
+    // .td-10
+    //     span
+    //         top: 10px
+    // .td-12
+    //     .is-rotate
+    //         span
+    //             margin-top: 16px  
     .td-6,
     .td-7,
     .td-8,
